bk_ida/gccida/g0/recog_3
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3910:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3911:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1a = (  struct rtx_def *)x0[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3914:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x1a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3924:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3925:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1b = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3929:40: error: too few arguments to function call, expected 2, have 1
if ( ext_register_operand( ( __int64)x2) ) 
     ~~~~~~~~~~~~~~~~~~~~              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/tm-preds.h:37:1: note: 'ext_register_operand' declared here
extern int ext_register_operand PARAMS ((rtx, enum machine_mode));
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3931:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3932:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2a = ( rtx)x1b[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3952:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x1b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3953:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[0] != 66 || *( _WORD *)recog_data_0.operand[1] != 66 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3953:61: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[0] != 66 || *( _WORD *)recog_data_0.operand[1] != 66 ) 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3967:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2c; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3968:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1f = (  struct rtx_def *)x0[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3971:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x1f; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3984:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3985:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1c = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:3994:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2g; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:4007:41: error: too few arguments to function call, expected 2, have 1
if ( ext_register_operand( ( __int64)x2d) ) 
     ~~~~~~~~~~~~~~~~~~~~               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/tm-preds.h:37:1: note: 'ext_register_operand' declared here
extern int ext_register_operand PARAMS ((rtx, enum machine_mode));
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/insn-recog.c:4009:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2d; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_3/src/obj/insn-recog.o] Error 1
